travis needs to load x86 std

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ matrix:
   include:
     - env: TARGET=i686-pc-windows-msvc
       os: windows
+      before_script:
+        - rustup target add i686-pc-windows-msvc
 
 script:
   - cargo build --verbose
