--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ travis-ci = { repository = "mdonoughe/sbzdeck" }
 [dependencies]
 futures = "0.1.25"
 indexmap = "1.0"
-sbz-switch = "3.0"
+sbz-switch = { version = "3.0", git = "https://github.com/mdonoughe/sbz-switch" }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
