--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
             "UUID": "io.github.mdonoughe.sbzdeck.selectOutput"
         }
     ],
+    "SDKVersion": 2,
     "Author": "Matthew Donoughe <mdonoughe@gmail.com>",
     "Category": "sbzdeck",
     "CategoryIcon": "categoryIcon",
@@ -32,5 +33,8 @@
             "Platform": "windows",
             "MinimumVersion": "10"
         }
-    ]
+    ],
+    "Software": {
+        "MinimumVersion": "4.1"
+    }
 }
