--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
     "Author": "Matthew Donoughe <mdonoughe@gmail.com>",
     "Category": "sbzdeck",
     "CategoryIcon": "categoryIcon",
-    "CodePathWin": "target\\i686-pc-windows-msvc\\debug\\sbzdeck.exe",
+    "CodePathWin": "target\\i686-pc-windows-msvc\\debug\\plugin.exe",
+    "PropertyInspectorPath": "target/deploy/index.html",
     "Description": "Control Creative Sound Blaster devices",
     "Name": "sbzdeck",
     "Icon": "actionSpeaker",
