--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
       os: windows
       before_script:
         - rustup target add i686-pc-windows-msvc
+        - cargo install -f cargo-web
 
 script:
-  - cargo build --verbose
+  - powershell -ExecutionPolicy Bypass ./Build-Plugin.ps1
