--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -14,12 +14,12 @@ travis-ci = { repository = "mdonoughe/sbzdeck" }
 
 [dependencies]
 common = { path = "../common" }
-futures = "0.1.25"
-indexmap = { version = "1.0", features = ["serde-1"] }
-sbz-switch = "3.1"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-slog = { version = "2.4", features = ["max_level_trace", "release_max_level_info"] }
-streamdeck-rs = "0.3.0"
-tokio = "0.1.14"
+futures = "0.3"
+indexmap = { version = "1", features = ["serde-1"] }
+sbz-switch = "4"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
+streamdeck-rs = "0.5"
+tokio = { version = "0.2", features = ["macros", "rt-core", "stream", "time"] }
