--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 keywords = ["stream-deck", "sound-blaster"]
 license = "MIT/Apache-2.0"
 edition = "2018"
+build = "build.rs"
 
 [badges]
 travis-ci = { repository = "mdonoughe/sbzdeck" }
@@ -23,3 +24,6 @@ serde_json = "1"
 slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
 streamdeck-rs = "0.5"
 tokio = { version = "0.2", features = ["macros", "rt-core", "stream", "time"] }
+
+[build-dependencies]
+winres = "0.1"
